2004-01-07 Braden McDaniel  <braden@endoframe.com>

	Removed unused member "openvrml::gl::viewer::rotation_changed".

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2004-01-01 Braden McDaniel  <braden@endoframe.com>

	Added operator* implementations for vec2f and vec3f that take a
	scalar on the left-hand side.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h

2003-12-31 Braden McDaniel  <braden@endoframe.com>

	Doxygen doc-comment updates.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2003-12-31 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile.in:  Updated for Doxygen 1.3.5.

2003-12-31 Braden McDaniel  <braden@endoframe.com>

	Doxygen doc-comment updates.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-12-14 Braden McDaniel  <braden@endoframe.com>

	Added value_type typedef to field_value subclasses.  Added
	constructor that takes a value_type to the mf* types.

	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/field.cpp

2003-12-09 Braden McDaniel  <braden@endoframe.com>

	Modifed "viewer::insert_background" to use the "image" class.

	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-11-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp:  Implemented
	operator== for "openvrml::image".

2003-11-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Check GL_MAX_TEXTURE_SIZE and rescale
	the texture as needed.

2003-11-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(viewer::insert_texture):  Accept arbitrarily large textures